@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Icmake V 9.02.01</title>
+<title>Icmake V 9.02.02</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Icmake V 9.02.01</h1>
+<h1 id="title">Icmake V 9.02.02</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1992-2016</h2>
@@ -33,7 +33,7 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.01">9.02.01</a>
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.02">9.02.02</a>
 Nov 01, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.00">9.02.00</a>
 Sep 29, 2016;
