@@ -35,8 +35,8 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
-        it() url(9.02.01)
-              (https://github.com/fbb-git/_project_/releases/tag/9.02.01)
+        it() url(9.02.02)
+              (https://github.com/fbb-git/_project_/releases/tag/9.02.02)
 Nov 01, 2016;
         it() url(9.02.00)
               (https://github.com/fbb-git/_project_/releases/tag/9.02.00)
