@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmake</h1>
-<h2 id="author">icmake.9.02.01.tar.gz</h2>
+<h2 id="author">icmake.9.02.02.tar.gz</h2>
 <h2 id="date">1992-2016</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmake(1)</h1>
-<h2 id="author">icmake.9.02.01.tar.gz A program maintenance utility</h2>
+<h2 id="author">icmake.9.02.02.tar.gz A program maintenance utility</h2>
 <h2 id="date">1992-2016</h2>
 
 
